--- a/css/style.css
+++ b/css/style.css
@@ -793,6 +793,14 @@ a.active {
   }
 }
 
+.btn {
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
+
 /* The snackbar - position it at the bottom and in the middle of the screen */
 #snackbar {
   visibility: hidden; /* Hidden by default. Visible on click */
